# MPSolve

./: CMakeLists.txt
src/: CMakeLists.txt
src/libmps/: CMakeLists.txt
